// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart 1`] = `
<VictoryLabel
  capHeight={0.71}
  direction="inherit"
  lineHeight={1}
  style={
    Object {
      "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
    }
  }
  textComponent={<Text />}
  tspanComponent={<TSpan />}
/>
`;

exports[`Chart 2`] = `
<VictoryLabel
  capHeight={0.71}
  direction="inherit"
  lineHeight={1}
  style={
    Object {
      "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
    }
  }
  textComponent={<Text />}
  tspanComponent={<TSpan />}
/>
`;

exports[`renders component text 1`] = `
<VictoryLabel
  capHeight={0.71}
  direction="inherit"
  lineHeight={1}
  style={
    Object {
      "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
    }
  }
  text="This is a test"
  textComponent={<Text />}
  tspanComponent={<TSpan />}
/>
`;
